@@ -1,3 +1,12 @@
+2005-02-16  Dan Winship  <danw@novell.com>
+
+	* stetic/Grid.cs (Connect): static method to connect multiple
+	grids so they have the same column widths.
+	(OnSizeRequested, OnSizeAllocated): update for that
+
+	* stetic/Stetic.cs (Main): Connect the Properties and
+	ChildProperties grids.
+
 2005-02-15  Dan Winship  <danw@novell.com>
 
 	* libstetic/ObjectWrapper.cs: split out parts of
